[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/GameHUD.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Minimap.tscn" id="2"]

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Background" type="ColorRect" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
z_index = -1
color = Color(0.1, 0.12, 0.15, 0.9)

[node name="TurnLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 18
text = "Turn 1"

[node name="Spacer1" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Your Turn"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="TimerLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 2

[node name="Spacer3" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="GoldLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Gold: 50"

[node name="Spacer4" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ResourcesLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = ""

[node name="ResearchLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Research: None"

[node name="ResearchButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Tech"

[node name="DiplomacyButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Diplomacy"

[node name="ShareButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Share"

[node name="Spacer5" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="Background" type="ColorRect" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
z_index = -1
color = Color(0.1, 0.12, 0.15, 0.9)

[node name="MenuButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Menu"

[node name="Spacer" type="Control" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EndTurnButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "End Turn"

[node name="UnitPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -200.0
offset_right = 220.0
offset_bottom = -60.0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="UnitPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="UnitPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Selected Unit"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="UnitPanel/VBox"]
layout_mode = 2

[node name="UnitInfo" type="Label" parent="UnitPanel/VBox"]
layout_mode = 2
text = "Unit Name
HP: 100/100
Moves: 2"

[node name="Status" type="Label" parent="UnitPanel/VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.35, 0.35, 1)
text = ""

[node name="Separator2" type="HSeparator" parent="UnitPanel/VBox"]
layout_mode = 2

[node name="Actions" type="HBoxContainer" parent="UnitPanel/VBox"]
layout_mode = 2

[node name="FoundCityButton" type="Button" parent="UnitPanel/VBox/Actions"]
visible = false
layout_mode = 2
text = "Found City"

[node name="FortifyButton" type="Button" parent="UnitPanel/VBox/Actions"]
layout_mode = 2
text = "Fortify"

[node name="AutomationButton" type="Button" parent="UnitPanel/VBox/Actions"]
visible = false
layout_mode = 2
text = "Auto"

[node name="DetailsButton" type="Button" parent="UnitPanel/VBox/Actions"]
layout_mode = 2
text = "Info"

[node name="PromoteButton" type="Button" parent="UnitPanel/VBox/Actions"]
visible = false
layout_mode = 2
text = "Promote"

[node name="CityPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -400.0
offset_right = 330.0
offset_bottom = -60.0
grow_horizontal = 1
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="CityPanel"]
layout_mode = 2

[node name="CityName" type="Label" parent="CityPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "City Name"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="CityPanel/VBox"]
layout_mode = 2

[node name="CityInfo" type="Label" parent="CityPanel/VBox"]
layout_mode = 2
text = "Pop: 1 | Food: 0/10
Production: 0 | Building: None"

[node name="CityActions" type="HBoxContainer" parent="CityPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="WhyUpkeepButton" type="Button" parent="CityPanel/VBox/CityActions"]
layout_mode = 2
text = "Why upkeep?"

[node name="Separator2" type="HSeparator" parent="CityPanel/VBox"]
layout_mode = 2

[node name="GrowthBox" type="VBoxContainer" parent="CityPanel/VBox"]
layout_mode = 2

[node name="GrowthLabel" type="Label" parent="CityPanel/VBox/GrowthBox"]
layout_mode = 2
text = "Growth"

[node name="GrowthBar" type="ProgressBar" parent="CityPanel/VBox/GrowthBox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
show_percentage = false
min_value = 0.0
max_value = 1.0
value = 0.0

[node name="GrowthDetail" type="Label" parent="CityPanel/VBox/GrowthBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = ""

[node name="ProductionProgressBox" type="VBoxContainer" parent="CityPanel/VBox"]
layout_mode = 2

[node name="ProductionProgressLabel" type="Label" parent="CityPanel/VBox/ProductionProgressBox"]
layout_mode = 2
text = "Production"

[node name="ProductionBar" type="ProgressBar" parent="CityPanel/VBox/ProductionProgressBox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
show_percentage = false
min_value = 0.0
max_value = 1.0
value = 0.0

[node name="ProductionDetail" type="Label" parent="CityPanel/VBox/ProductionProgressBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = ""

[node name="ProductionLabel" type="Label" parent="CityPanel/VBox"]
layout_mode = 2
text = "Production Queue:"

[node name="ProductionList" type="ItemList" parent="CityPanel/VBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="CancelProductionButton" type="Button" parent="CityPanel/VBox"]
layout_mode = 2
text = "Cancel Production"

[node name="CloseButton" type="Button" parent="CityPanel/VBox"]
layout_mode = 2
text = "Close"

[node name="TooltipPanel" type="PanelContainer" parent="."]
visible = false
offset_right = 200.0
offset_bottom = 60.0

[node name="TooltipLabel" type="Label" parent="TooltipPanel"]
layout_mode = 2
text = "Tooltip text"

[node name="ContextPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -360.0
offset_right = 340.0
offset_bottom = -210.0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="ContextPanel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="ContextPanel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="ContextPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Context"

[node name="WhyButton" type="Button" parent="ContextPanel/VBox/Header"]
layout_mode = 2
text = "Why"

[node name="AttackButton" type="Button" parent="ContextPanel/VBox/Header"]
layout_mode = 2
text = "Attack"

[node name="Body" type="Label" parent="ContextPanel/VBox"]
layout_mode = 2
autowrap_mode = 2
text = ""

[node name="WhyPanel" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="WhyPanel"]
anchors_preset = 15
offset_right = 0.0
offset_bottom = 0.0

[node name="Header" type="HBoxContainer" parent="WhyPanel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="WhyPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Why"

[node name="CloseButton" type="Button" parent="WhyPanel/VBox/Header"]
layout_mode = 2
text = "X"

[node name="Body" type="RichTextLabel" parent="WhyPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
text = ""

[node name="RulesDetailPanel" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="RulesDetailPanel"]
anchors_preset = 15
offset_right = 0.0
offset_bottom = 0.0

[node name="Header" type="HBoxContainer" parent="RulesDetailPanel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="RulesDetailPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Details"

[node name="CloseButton" type="Button" parent="RulesDetailPanel/VBox/Header"]
layout_mode = 2
text = "X"

[node name="Body" type="RichTextLabel" parent="RulesDetailPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
text = ""

[node name="PromotionPanel" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.35
anchor_top = 0.25
anchor_right = 0.65
anchor_bottom = 0.75
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="PromotionPanel"]
anchors_preset = 15
offset_right = 0.0
offset_bottom = 0.0

[node name="Header" type="HBoxContainer" parent="PromotionPanel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PromotionPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Choose Promotion"

[node name="CloseButton" type="Button" parent="PromotionPanel/VBox/Header"]
layout_mode = 2
text = "X"

[node name="Info" type="Label" parent="PromotionPanel/VBox"]
layout_mode = 2
text = ""

[node name="PromotionList" type="ItemList" parent="PromotionPanel/VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true

[node name="RightRail" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -270.0
offset_top = 50.0
offset_right = -10.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="MinimapPanel" type="PanelContainer" parent="RightRail"]
layout_mode = 2
custom_minimum_size = Vector2(0, 240)
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="RightRail/MinimapPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="RightRail/MinimapPanel/VBox"]
text = "Minimap"

[node name="Minimap" parent="RightRail/MinimapPanel/VBox" instance=ExtResource("2")]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
size_flags_vertical = 3

[node name="PromisePanel" type="PanelContainer" parent="RightRail"]
layout_mode = 2
custom_minimum_size = Vector2(0, 170)
size_flags_horizontal = 3

[node name="Bevel" type="ColorRect" parent="RightRail/PromisePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 2.0
mouse_filter = 2
color = Color(0.2, 0.7, 0.9, 0.45)

[node name="VBox" type="VBoxContainer" parent="RightRail/PromisePanel"]
anchors_preset = 15
offset_right = 0.0
offset_bottom = 0.0

[node name="Title" type="Label" parent="RightRail/PromisePanel/VBox"]
text = "Action Queue"

[node name="PromiseScroll" type="ScrollContainer" parent="RightRail/PromisePanel/VBox"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3

[node name="PromiseList" type="VBoxContainer" parent="RightRail/PromisePanel/VBox/PromiseScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimelinePanel" type="PanelContainer" parent="RightRail"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bevel" type="ColorRect" parent="RightRail/TimelinePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 2.0
mouse_filter = 2
color = Color(0.2, 0.7, 0.9, 0.45)

[node name="VBox" type="VBoxContainer" parent="RightRail/TimelinePanel"]
anchors_preset = 15
offset_right = 0.0
offset_bottom = 0.0

[node name="Title" type="Label" parent="RightRail/TimelinePanel/VBox"]
text = "Timeline"

[node name="TimelineList" type="ItemList" parent="RightRail/TimelinePanel/VBox"]
custom_minimum_size = Vector2(0, 220)
size_flags_vertical = 3
allow_reselect = true

[node name="MessagePanel" type="PanelContainer" parent="RightRail"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
size_flags_horizontal = 3

[node name="MessageLabel" type="Label" parent="RightRail/MessagePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = ""
autowrap_mode = 2
